# kanade-bot

./: .env  .env.example  .env.prod  .gitignore  Kanade-v1.md  Kanade-v2.md  Kanade-wiki.md  Kanade-wiki.wikitext  Kanade.md  README.md  TODO.md  bot.py  help.md  lx_list_part_？？？  pyproject.toml
.github/prompts/: kanade-system.prompt.md
.github/workflows/: release.yml
assets/: .gitignore  Kanade-Bot-帮助文档.md  Kanade-v3.md  Summarizer.md  duanzi.json  fonts.conf  mcstatus_template.html
assets/helps/: 60s API.md  index.md  娱乐.md  工具.md  帮助.md  聊天.md
assets/prompts/: Kanade-v2.md  Kanade-v3-AstrBot.md  Kanade-v3.md  Summarizer.md
config/: .gitignore
config/chat/: Kanade-v1.md  Kanade-v3.md  Kanade-v4.md  Kanade-wiki.md  kanade_wiki.json
config/crystal/: crystal_config.json  gacha_10_template.html  gacha_config.json  harvest_config.json  harvest_result_template.html  harvest_results_template.html
config/crystal/gacha/: gacha_config.json
config/crystal/harvest/: harvest_config.json  harvest_result_template.html  harvest_results_template.html
config/help/: 60s API.md  index.md  今天吃什么.md  命令统计.md  图片处理.md  娱乐.md  工具.md  帮助.md  总结.md  水晶.md  画廊.md  聊天.md  音乐.md
config/model_updater/: template.html
config/summary/: Summarizer.md
config/tool/: preset_reaction_config.json
copilot_bot/plugins/api60s/: __init__.py  argparser.py  client.py  config.py
copilot_bot/plugins/api60s/plugins/daily/: __init__.py
copilot_bot/plugins/api60s/plugins/fun/: __init__.py  cache.py
copilot_bot/plugins/api60s/plugins/tool/: __init__.py  config.py
copilot_bot/plugins/apihz/: client.py  config.py
copilot_bot/plugins/chat/: __init__.py  ban.py  config.py  copilot.py  session.py  tool.py
copilot_bot/plugins/fun/: __init__.py  music.py
copilot_bot/plugins/help/: __init__.py  config.py
copilot_bot/plugins/weather/: __init__.py
data/: .gitignore
data/fun/: duanzi.json
data/music/: lx_list
kanade_bot/: banner.py
kanade_bot/plugins/: util.py
kanade_bot/plugins/api60s/: __init__.py  client.py  config.py
kanade_bot/plugins/api60s/plugins/daily/: config.py  (+4 more)
kanade_bot/plugins/apihz/: __init__.py  client.py  config.py  mc_server.py
kanade_bot/plugins/chat/: __init__.py  auto_reply.py  ban.py  chat.py  client.py  config.py  copilot.py  handler.py  matcher.py  memory.py  rag.py  service.py  tool.py  util.py
kanade_bot/plugins/chat/agent/: copilot.py  memory.py  tool.py
kanade_bot/plugins/command_counter/: __init__.py  config.py  handler.py  matcher.py
kanade_bot/plugins/crystal/: __init__.py  cache.py  config.py  crystal.py  enum.py  gacha.py  handler.py  harvest.py  matcher.py  service.py
kanade_bot/plugins/fun/: __init__.py  cache.py  config.py  duanzi.py  handler.py  lyric.py  matcher.py  music.py  service.py  sing.py  waifu.py
kanade_bot/plugins/gallery/: __init__.py  config.py  gallery.py  handler.py  matcher.py
kanade_bot/plugins/help/: __init__.py  config.py  handler.py  help.py  matcher.py  offline.py  service.py
kanade_bot/plugins/imgtool/: __init__.py  handler.py  matcher.py
kanade_bot/plugins/model_updater/: __init__.py  config.py
kanade_bot/plugins/music/: __init__.py  audio.py  config.py  lyric.py  matcher.py  music.py  service.py
kanade_bot/plugins/summary/: __init__.py  config.py  handler.py  matcher.py  service.py  summarizer.py
kanade_bot/plugins/tool/: __init__.py  config.py  handler.py  matcher.py  mcstatus.py  schedule.py  service.py
kanade_bot/utils/: banner.py  cache.py  common.py  config.py  onebot11.py  parse.py  parser.py  session.py  watchdog.py
rag/: .gitignore  Kanade-wiki.md
scripts/: banner.py  github_watchdog.py  init_kanade_wiki_rag_db.py  install_playwright_linux.py  kanade_rag_server.py  kanade_watchdog.py  kanade_wiki.py  openai_embedding_server.py  rag_server.py  util.py  watchdog.py
test/: test.py  test_copilot.py  test_parse.py  test_time.py
tests/: apsheduler_test.py  chromadb_test.py  copilot_streaming_test.py  emoji_test.py  env_config_test.py  f2s_test.py  generic_test.py  harvest_test.py  langchain_splitter_test.py  lolicon_test.py  onebot_test.py  pydantic_validator_test.py  rag_test.py  regex_test.py  render_card_test.py  watchdog_test.py  x_regex_test.py
tests/chat/: chromadb_test.py  copilot_streaming_test.py  copilot_test.py  langchain_chroma_test.py  tavily_search_test.py
tests/crystal/: harvest_test.py
tests/fun/: emoji_test.py  loli_test.py
tests/nonebot/: matcher_test.py  message_serialize_test.py  onebot_test.py
(+24 files in other folders)
