[project]
name = "kanade-bot"
version = "v3.5.1"
description = "kanade-bot"
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-console>=0.9.0",
    "nonebot-plugin-status>=0.9.0",
    "github-copilot-sdk>=0.2.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "httpx>=0.28.1",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.2",
    "mcstatus>=13.0.1",
    "chromadb>=1.5.6",
    "sentence-transformers>=5.3.0",
    "rpyc>=6.0.2",
    "nonebot-plugin-htmlrender>=0.6.7",
]

[tool.nonebot]
plugin_dirs = ["kanade_bot/plugins"]
builtin_plugins = ["echo"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
nonebot-adapter-console = [
    { name = "Console", module_name = "nonebot.adapters.console" },
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-status = ["nonebot_plugin_status"]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-htmlrender = ["nonebot_plugin_htmlrender"]

[dependency-groups]
dev = ["check-requirements-txt>=1.4.2"]
